docs/api/qiskit/1.3/qiskit.circuit.library.AND.mdx
---
title: AND (v1.3)
description: API reference for qiskit.circuit.library.AND in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.AND
---

# AND

<Class id="qiskit.circuit.library.AND" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/boolean_logic/quantum_and.py#L23-L106" signature="qiskit.circuit.library.AND(num_variable_qubits, flags=None, mcx_mode='noancilla')" modifiers="class">
  Bases: [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

  A circuit implementing the logical AND operation on a number of qubits.

  For the AND operation the state $|1\rangle$ is interpreted as `True`. The result qubit is flipped, if the state of all variable qubits is `True`. In this format, the AND operation equals a multi-controlled X gate, which is controlled on all variable qubits. Using a list of flags however, qubits can be skipped or negated. Practically, the flags allow to skip controls or to apply pre- and post-X gates to the negated qubits.

  The AND gate without special flags equals the multi-controlled-X gate:

  ![Diagram illustrating the previously described circuit.](/docs/images/api/qiskit/1.3/qiskit-circuit-library-AND-1.avif)

  Using flags we can negate qubits or skip them. For instance, if we have 5 qubits and want to return `True` if the first qubit is `False` and the last two are `True` we use the flags `[-1, 0, 0, 1, 1]`.

  ![Diagram illustrating the previously described circuit.](/docs/images/api/qiskit/1.3/qiskit-circuit-library-AND-2.avif)

  Create a new logical AND circuit.

  <Admonition title="Deprecated since version 1.3_pending" type="danger">
    The class `qiskit.circuit.library.boolean_logic.quantum_and.AND` is pending deprecation as of qiskit 1.3. It will be marked deprecated in a future release, and then removed no earlier than 3 months after the release date. Use qiskit.circuit.library.AndGate instead.
  </Admonition>

  **Parameters**

  *   **num\_variable\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The qubits of which the AND is computed. The result will be written into an additional result qubit.
  *   **flags** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*) – A list of +1/0/-1 marking negations or omissions of qubits.
  *   **mcx\_mode** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The mode to be used to implement the multi-controlled X gate.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.AND.ancillas">
    A list of `AncillaQubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.AND.calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`

    <Admonition title="Deprecated since version 1.3" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.calibrations` is deprecated as of Qiskit 1.3. It will be removed in Qiskit 2.0. The entire Qiskit Pulse package is being deprecated and will be moved to the Qiskit Dynamics repository: [https://github.com/qiskit-community/qiskit-dynamics](https://github.com/qiskit-community/qiskit-dynamics). Note that once removed, `qiskit.circuit.quantumcircuit.QuantumCircuit.calibrations` will have no alternative in Qiskit.
    </Admonition>
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.AND.clbits">
    A list of `Clbit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.AND.data">
    The circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.AND.duration">
    The total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.circuit.library.AND.unit "qiskit.circuit.library.AND.unit").

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.duration` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.AND.global_phase">
    The global phase of the current circuit scope in radians.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.AND.instances" attributeValue="176" />

  ### layout

  <Attribute id="qiskit.circuit.library.AND.layout">
    Return any associated layout information about the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.AND.metadata">
    Arbitrary user-defined metadata for the circuit.

    Qiskit will not examine the content of this mapping, but it will pass it through the transpiler and reattach it to the output, so you can track your own metadata.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.AND.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_captured\_vars

  <Attribute id="qiskit.circuit.library.AND.num_captured_vars">
    The number of real-time classical variables in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_vars()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.AND.num_input_vars "qiskit.circuit.library.AND.num_input_vars") must be zero.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.AND.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_declared\_vars

  <Attribute id="qiskit.circuit.library.AND.num_declared_vars">
    The number of real-time classical variables in the circuit that are declared by this circuit scope, excluding inputs or captures.

    This is the length of the `iter_declared_vars()` iterable.
  </Attribute>

  ### num\_input\_vars

  <Attribute id="qiskit.circuit.library.AND.num_input_vars">
    The number of real-time classical variables in the circuit marked as circuit inputs.

    This is the length of the `iter_input_vars()` iterable. If this is non-zero, [`num_captured_vars`](#qiskit.circuit.library.AND.num_captured_vars "qiskit.circuit.library.AND.num_captured_vars") must be zero.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.AND.num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.AND.num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_vars

  <Attribute id="qiskit.circuit.library.AND.num_vars">
    The number of real-time classical variables in the circuit.

    This is the length of the `iter_vars()` iterable.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.AND.op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.13)") – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.AND.parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.AND.prefix" attributeValue="'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.AND.qubits">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.AND.unit">
    The unit that [`duration`](#qiskit.circuit.library.AND.duration "qiskit.circuit.library.AND.duration") is specified in.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.unit` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.AND.name" attributeTypeHint="str">
    A human-readable name for the circuit.
  </Attribute>

  ### qregs

  <Attribute id="qiskit.circuit.library.AND.qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the `QuantumRegister`s in this circuit. You should not mutate this.
  </Attribute>

  ### cregs

  <Attribute id="qiskit.circuit.library.AND.cregs" attributeTypeHint="list[ClassicalRegister]">
    A list of the `ClassicalRegister`s in this circuit. You should not mutate this.
  </Attribute>
</Class>

