docs/api/qiskit/2.0/qiskit.circuit.library.AND.mdx
---
title: AND (v2.0)
description: API reference for qiskit.circuit.library.AND in qiskit v2.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.AND
---

# AND

<Class id="qiskit.circuit.library.AND" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/boolean_logic/quantum_and.py#L23-L106" signature="qiskit.circuit.library.AND(num_variable_qubits, flags=None, mcx_mode='noancilla')" modifiers="class">
  Bases: [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

  A circuit implementing the logical AND operation on a number of qubits.

  For the AND operation the state $|1\rangle$ is interpreted as `True`. The result qubit is flipped, if the state of all variable qubits is `True`. In this format, the AND operation equals a multi-controlled X gate, which is controlled on all variable qubits. Using a list of flags however, qubits can be skipped or negated. Practically, the flags allow to skip controls or to apply pre- and post-X gates to the negated qubits.

  The AND gate without special flags equals the multi-controlled-X gate:

  ![Diagram illustrating the previously described circuit.](/docs/images/api/qiskit/2.0/qiskit-circuit-library-AND-1.avif)

  Using flags we can negate qubits or skip them. For instance, if we have 5 qubits and want to return `True` if the first qubit is `False` and the last two are `True` we use the flags `[-1, 0, 0, 1, 1]`.

  ![Diagram illustrating the previously described circuit.](/docs/images/api/qiskit/2.0/qiskit-circuit-library-AND-2.avif)

  Create a new logical AND circuit.

  <Admonition title="Deprecated since version 1.3_pending" type="danger">
    The class `qiskit.circuit.library.boolean_logic.quantum_and.AND` is pending deprecation as of Qiskit 1.3. It will be marked deprecated in a future release, and then removed no earlier than 3 months after the release date. Use qiskit.circuit.library.AndGate instead.
  </Admonition>

  **Parameters**

  *   **num\_variable\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The qubits of which the AND is computed. The result will be written into an additional result qubit.
  *   **flags** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*) – A list of +1/0/-1 marking negations or omissions of qubits.
  *   **mcx\_mode** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The mode to be used to implement the multi-controlled X gate.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.AND.ancillas">
    A list of `AncillaQubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.AND.clbits">
    A list of `Clbit`s in the order that they were added. You should not mutate this.

    **Example**

    ```python
    from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit

    qr1 = QuantumRegister(2)
    qr2 = QuantumRegister(1)
    cr1 = ClassicalRegister(2)
    cr2 = ClassicalRegister(1)
    qc = QuantumCircuit(qr1, qr2, cr1, cr2)

    print("List the qubits in this circuit:", qc.qubits)
    print("List the classical bits in this circuit:", qc.clbits)
    ```

    ```text
    List the qubits in this circuit: [Qubit(QuantumRegister(2, 'q0'), 0),
    Qubit(QuantumRegister(2, 'q0'), 1), Qubit(QuantumRegister(1, 'q1'), 0)]
    List the classical bits in this circuit: [Clbit(ClassicalRegister(2, 'c0'), 0),
    Clbit(ClassicalRegister(2, 'c0'), 1), Clbit(ClassicalRegister(1, 'c1'), 0)]
    ```
  </Attribute>

  ### cregs

  <Attribute id="qiskit.circuit.library.AND.cregs">
    A list of `Clbit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.AND.data">
    The circuit data (instructions and context).

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2)
    qc.measure([0], [1])
    print(qc.data)
    ```

    ```text
    [CircuitInstruction(operation=Instruction(name='measure', num_qubits=1,
    num_clbits=1, params=[]), qubits=(Qubit(QuantumRegister(2, 'q'), 0),),
    clbits=(Clbit(ClassicalRegister(2, 'c'), 1),))]
    ```

    **Returns**

    A list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction") instances in the circuit.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.AND.duration">
    The total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.circuit.library.AND.unit "qiskit.circuit.library.AND.unit").

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.duration` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.AND.global_phase">
    The global phase of the current circuit scope in radians.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    circuit = QuantumCircuit(2)
    circuit.h(0)
    circuit.cx(0, 1)
    print(circuit.global_phase)
    ```

    ```text
    0.0
    ```

    ```python
    from numpy import pi

    circuit.global_phase = pi/4
    print(circuit.global_phase)
    ```

    ```text
    0.7853981633974483
    ```
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.AND.instances" attributeValue="189" />

  ### layout

  <Attribute id="qiskit.circuit.library.AND.layout">
    Return any associated layout information about the circuit.

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function: an initial layout that permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout, which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    # Create circuit to test transpiler on
    qc = QuantumCircuit(3, 3)
    qc.h(0)
    qc.cx(0, 1)
    qc.swap(1, 2)
    qc.cx(0, 1)

    # Add measurements to the circuit
    qc.measure([0, 1, 2], [0, 1, 2])

    # Specify the QPU to target
    backend = GenericBackendV2(3)

    # Transpile the circuit
    pass_manager = generate_preset_pass_manager(
    optimization_level=1, backend=backend
    )
    transpiled = pass_manager.run(qc)

    # Print the layout after transpilation
    print(transpiled.layout.routing_permutation())
    ```

    ```text
    [0, 1, 2]
    ```
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.AND.metadata">
    Arbitrary user-defined dictionary of metadata for the circuit.

    Qiskit will not examine the content of this mapping, but it will pass it through the transpiler and reattach it to the output, so you can track your own metadata.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, metadata={'experiment_type': 'Bell state experiment'})

    print(qc.metadata)
    ```

    ```text
    {'experiment_type': 'Bell state experiment'}
    ```
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.AND.num_ancillas">
    Return the number of ancilla qubits.

    **Example**

    ```python
    from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister

    # Create a 2-qubit quantum circuit
    reg = QuantumRegister(2)
    qc = QuantumCircuit(reg)

    # Create an ancilla register with 1 qubit
    anc = AncillaRegister(1)
    qc.add_register(anc)  # Add the ancilla register to the circuit

    print("Number of ancilla qubits:", qc.num_ancillas)
    ```

    ```text
    Number of ancilla qubits: 1
    ```
  </Attribute>

  ### num\_captured\_stretches

  <Attribute id="qiskit.circuit.library.AND.num_captured_stretches">
    The number of stretches in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_stretches()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.AND.num_input_vars "qiskit.circuit.library.AND.num_input_vars") must be zero.
  </Attribute>

  ### num\_captured\_vars

  <Attribute id="qiskit.circuit.library.AND.num_captured_vars">
    The number of real-time classical variables in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_vars()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.AND.num_input_vars "qiskit.circuit.library.AND.num_input_vars") must be zero.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.AND.num_clbits">
    Return number of classical bits.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    # Create a new circuit with two qubits and one classical bit
    qc = QuantumCircuit(2, 1)
    print("Number of classical bits:", qc.num_clbits)
    ```

    ```text
    Number of classical bits: 1
    ```
  </Attribute>

  ### num\_declared\_stretches

  <Attribute id="qiskit.circuit.library.AND.num_declared_stretches">
    The number of stretches in the circuit that are declared by this circuit scope, excluding captures.

    This is the length of the `iter_declared_stretches()` iterable.
  </Attribute>

  ### num\_declared\_vars

  <Attribute id="qiskit.circuit.library.AND.num_declared_vars">
    The number of real-time classical variables in the circuit that are declared by this circuit scope, excluding inputs or captures.

    This is the length of the `iter_declared_vars()` iterable.
  </Attribute>

  ### num\_identifiers

  <Attribute id="qiskit.circuit.library.AND.num_identifiers">
    The number of real-time classical variables and stretches in the circuit.

    This is equal to [`num_vars()`](#qiskit.circuit.library.AND.num_vars "qiskit.circuit.library.AND.num_vars") + [`num_stretches()`](#qiskit.circuit.library.AND.num_stretches "qiskit.circuit.library.AND.num_stretches").
  </Attribute>

  ### num\_input\_vars

  <Attribute id="qiskit.circuit.library.AND.num_input_vars">
    The number of real-time classical variables in the circuit marked as circuit inputs.

    This is the length of the `iter_input_vars()` iterable. If this is non-zero, [`num_captured_vars`](#qiskit.circuit.library.AND.num_captured_vars "qiskit.circuit.library.AND.num_captured_vars") must be zero.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.AND.num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.AND.num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_stretches

  <Attribute id="qiskit.circuit.library.AND.num_stretches">
    The number of stretches in the circuit.

    This is the length of the `iter_stretches()` iterable.
  </Attribute>

  ### num\_vars

  <Attribute id="qiskit.circuit.library.AND.num_vars">
    The number of real-time classical variables in the circuit.

    This is the length of the `iter_vars()` iterable.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.AND.op_start_times">
    Return a list of operation start times.

    <Admonition title="Note" type="note">
      This attribute computes the estimate starting time of the operations in the scheduled circuit and only works for simple circuits that have no control flow or other classical feed-forward operations.
    </Admonition>

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    qc = QuantumCircuit(2)
    qc.h(0)
    qc.cx(0, 1)
    qc.measure_all()

    # Print the original circuit
    print("Original circuit:")
    print(qc)

    # Transpile the circuit with a specific basis gates list and print the resulting circuit
    backend = GenericBackendV2(2, basis_gates=['u1', 'u2', 'u3', 'cx'])
    pm = generate_preset_pass_manager(
        optimization_level=1, backend=backend, scheduling_method="alap"
    )
    transpiled_qc = pm.run(qc)
    print("Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:")
    print(transpiled_qc)

    # Print the start times of each instruction in the transpiled circuit
    print("Start times of instructions in the transpiled circuit:")
    for instruction, start_time in zip(transpiled_qc.data, transpiled_qc.op_start_times):
        print(f"{instruction.operation.name}: {start_time}")
    ```

    ```text
    Original circuit:
            ┌───┐      ░ ┌─┐
    q_0: ┤ H ├──■───░─┤M├───
            └───┘┌─┴─┐ ░ └╥┘┌─┐
    q_1: ─────┤ X ├─░──╫─┤M├
                └───┘ ░  ║ └╥┘
    meas: 2/══════════════╩══╩═
                        0  1

    Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:
                ┌─────────┐          ░ ┌─────────────────┐┌─┐
    q_0 -> 0 ───┤ U2(0,π) ├──────■───░─┤ Delay(1255[dt]) ├┤M├
            ┌──┴─────────┴───┐┌─┴─┐ ░ └───────┬─┬───────┘└╥┘
    q_1 -> 1 ┤ Delay(196[dt]) ├┤ X ├─░─────────┤M├─────────╫─
            └────────────────┘└───┘ ░         └╥┘         ║
    meas: 2/═══════════════════════════════════╩══════════╩═
                                                1          0

    Start times of instructions in the transpiled circuit:
    u2: 0
    delay: 0
    cx: 196
    barrier: 2098
    delay: 2098
    measure: 3353
    measure: 2098
    ```

    **Returns**

    List of integers representing instruction estimated start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.13)") – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.AND.parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.AND.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.AND.qregs">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.AND.qubits">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.AND.unit">
    The unit that [`duration`](#qiskit.circuit.library.AND.duration "qiskit.circuit.library.AND.duration") is specified in.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.unit` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.AND.name" attributeTypeHint="str">
    A human-readable name for the circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, name="my_circuit")
    print(qc.name)
    ```

    ```text
    my_circuit
    ```
  </Attribute>
</Class>

